Version 0.184

debuginfod: Use libarchive's bsdtar as the .deb-family file unpacker.

Version 0.183

debuginfod: New thread-busy metric and more detailed error metrics.
            New --fdcache-mintmp and tracking of filesystem freespace.
            New increased webapi concurrency while grooming.

debuginfod-client: DEBUGINFOD_SONAME macro added to debuginfod.h which
                   can be used to dlopen the libdebuginfod.so library.
                   New function debuginfod_set_verbose_fd and
                   DEBUGINFOD_VERBOSE environment variable.

config: profile.sh and profile.csh won't export DEBUGINFOD_URLS unless
        configured --enable-debuginfod-urls[=URLS]

elflint, readelf: Recognize SHF_GNU_RETAIN.
                  Handle SHT_X86_64_UNWIND as valid relocation target.

Version 0.182

backends: Support for tilegx has been removed.

config: New /etc/profile.d files to provide default $DEBUGINFOD_URLS.

debuginfod: More efficient package traversal, tolerate various errors
            during scanning, grooming progress is more visible and
            interruptible, more prometheus metrics.

debuginfod-client: Now supports compressed (kernel) ELF images.

libdwfl: Add ZSTD compression support.

Version 0.181

libelf: elf_update now compensates (fixes up) a bad sh_addralign for
        SHF_COMPRESSED sections.

libdebuginfod: configure now takes --enable-libdebuginfod=dummy or
               --disable-libdebuginfod for bootstrapping.
               DEBUGINFOD_URLS now accepts "scheme-free" urls
               (guessing at what the user meant, either http:// or file://)

readelf, elflint: Handle aarch64 bti, pac bits in dynamic table and gnu
                  property notes.

libdw, readelf: Recognize DW_CFA_AARCH64_negate_ra_state. Allows unwinding
                on arm64 for code that is compiled for PAC (Pointer
                Authentication Code) as long as it isn't enabled.

Version 0.180
