@@ -1,3 +1,7 @@
+2021-05-04  Alice Zhang  <alizhang@redhat.com>
+
+	* run-debuginfod-find.sh: Added tests for negative cache files.
+
 2021-04-26  Frank Ch. Eigler <fche@redhat.com>
 
 	PR27571
